fixed color contrast again for buttons

--- a/style.css
+++ b/style.css
@@ -869,6 +869,7 @@ h4 {
   background: #da795c;
   color: #212121 !important;
   box-shadow: 2px 2px 7px #212121;
+  font-size: 18.5px;
 }
 
 .btn-atomic-tangerine:hover {
